cfn/core.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "static resources for MC server",
    "Parameters": {
        "VPCID": {
            "Type": "String",
            "Description": "VPC to deploy to",
        },
        "PubSBT": {
            "Type": "String",
            "Description": "Public subnet to deploy Minecraft server to",
        }
    },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
        "MCEBSKeyAlias": {
            "Type": "AWS::KMS::Alias",
            "DependsOn": "MCEBSKey",
            "Properties": {
                "AliasName": "alias/minecraft-kms2",
                "TargetKeyId": {"Ref": "MCEBSKey"}
            }
        },
        "MCEBSKey":{
            "Type": "AWS::KMS::Key",
            "Properties": {
                "Description": "Minecraft server KMS key",
                "Enabled": "true",
                "EnableKeyRotation": "true",
                "KeyPolicy": {
                    "Id": "key-consolepolicy-3",
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Sid": "Enable IAM User Permissions",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": "arn:aws:iam::019828616938:root"
                            },
                            "Action": "kms:*",
                            "Resource": "*"
                        },
                        {
                            "Sid": "Allow access for Key Administrators",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": [
                                    "arn:aws:iam::019828616938:role/aws-service-role/trustedadvisor.amazonaws.com/AWSServiceRoleForTrustedAdvisor",
                                    "arn:aws:iam::019828616938:role/aws-service-role/support.amazonaws.com/AWSServiceRoleForSupport"
                                ]
                            },
                            "Action": [
                                "kms:Create*",
                                "kms:Describe*",
                                "kms:Enable*",
                                "kms:List*",
                                "kms:Put*",
                                "kms:Update*",
                                "kms:Revoke*",
                                "kms:Disable*",
                                "kms:Get*",
                                "kms:Delete*",
                                "kms:TagResource",
                                "kms:UntagResource",
                                "kms:ScheduleKeyDeletion",
                                "kms:CancelKeyDeletion"
                            ],
                            "Resource": "*"
                        },
                        {
                            "Sid": "Allow use of the key",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": [
                                    "arn:aws:iam::019828616938:role/aws-service-role/trustedadvisor.amazonaws.com/AWSServiceRoleForTrustedAdvisor",
                                    "arn:aws:iam::019828616938:role/aws-service-role/support.amazonaws.com/AWSServiceRoleForSupport"
                                ]
                            },
                            "Action": [
                                "kms:Encrypt",
                                "kms:Decrypt",
                                "kms:ReEncrypt*",
                                "kms:GenerateDataKey*",
                                "kms:DescribeKey"
                            ],
                            "Resource": "*"
                        },
                        {
                            "Sid": "Allow attachment of persistent resources",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": [
                                    "arn:aws:iam::019828616938:role/aws-service-role/trustedadvisor.amazonaws.com/AWSServiceRoleForTrustedAdvisor",
                                    "arn:aws:iam::019828616938:role/aws-service-role/support.amazonaws.com/AWSServiceRoleForSupport"
                                ]
                            },
                            "Action": [
                                "kms:CreateGrant",
                                "kms:ListGrants",
                                "kms:RevokeGrant"
                            ],
                            "Resource": "*",
                            "Condition": {
                                "Bool": {
                                    "kms:GrantIsForAWSResource": "true"
                                }
                            }
                        }
                    ]
                }
            }
        },
        "MCEBS": {
            "Type": "AWS::EC2::Volume",
            "DependsOn": "MCEBSKeyAlias",
            "Properties": {
                "Encrypted": "true",
                "KmsKeyId": "alias/minecraft-kms2",
                "Size": "8",
                "AvailabilityZone": {"Fn::Sub": "${AWS::Region}a"},
                "Tags": [
                    {"Key": "minecraft-server", "Value": "true"},
                    {"Key": "Name", "Value": "minecraft-ebs"}
                ]
            }
        },
        "MCEBSLP": {
            "Type": "AWS::DLM::LifecyclePolicy",
            "DependsOn": "MCEBS",
            "Properties": {
                "Description": "Minecraft server EBS lifecycle policy",
                "State": "ENABLED",
                "ExecutionRoleArn": "arn:aws:iam::019828616938:role/service-role/AWSDataLifecycleManagerDefaultRole",
                "PolicyDetails": {
                    "ResourceLocations": ["CLOUD"],
                    "ResourceTypes": ["VOLUME"],
                    "Schedules": [{
                        "Name": "Daily Snapshots",
                        "TagsToAdd": [{
                            "Key": "type",
                            "Value": "DailySnapshot"
                        }],
                        "CreateRule": {
                            "Interval": 24,
                            "IntervalUnit": "HOURS",
                            "Times": [
                                "07:00"
                            ]
                        },
                        "RetainRule": {
                            "Count": 3
                        },
                        "CopyTags": "true"
                   }],
                    "TargetTags": [
                        {
                            "Key": "minecraft-server",
                            "Value": "true"
                        }
                    ]
                },
                "Tags": [
                    {"Key": "Name", "Value": "minecraft-ebs-lifecyclepolicy"}
                ]
            }
        },
        "MCEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Tags": [
                    {"Key": "minecraft-server", "Value": ""},
                    {"Key": "Name", "Value": "minecraft-eip"}
                ]            
            }
        },
        "MCAppSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SG for Minecraft server",
                "GroupName": "minecraft-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "udp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "minecraft-server", "Value": ""},
                {"Key": "Name", "Value": "minecraft-sg"}
            ]
            }
        },
        "MGMTSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow SSH for remote management",
                "GroupName": "mgmt-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "ToPort": "22",
                        "IpProtocol": "tcp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "mgmt-sg"}
            ]
            }
        },
        "WEBSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open web ports to Internet",
                "GroupName": "web-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "ToPort": "80",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "ToPort": "443",
                        "IpProtocol": "tcp"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "web-sg"}
            ]
            }
        },
        "VPCSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow comms inside VPC",
                "GroupName": "vpc-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "172.31.0.0/16",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "172.31.0.0/16",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "minecraft-sg"}
            ]
            }
        }
    },
    "Outputs": {
        "MCEBS": {
            "Value": {"Ref": "MCEBS"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-ebs-${AWS::Region}a"}
            }
        },
        "MCEIP": {
            "Value": {"Fn::GetAtt" : [ "MCEIP", "AllocationId" ]},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-eip-${AWS::Region}a"}
            }
        },
        "MCEIPAddress": {
            "Value": {"Ref" : "MCEIP"}
        },
        "MCSBT": {
            "Value": {"Ref": "PubSBT"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-sbt"}
            }
        },
        "MCSG": {
            "Value": {"Ref": "MCAppSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mc-sg"}
            }
        },
        "WEBSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-web-sg"}
            }
        },
        "MGMTSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mgmt-sg"}
            }
        }
    }
}
