cfn/optional-sgs.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "",
    "Metadata": {

    },
    "Parameters": {
    
    },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
        "MCAppSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SG for Minecraft server",
                "GroupName": "minecraft-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "udp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "minecraft-server", "Value": ""},
                {"Key": "Name", "Value": "minecraft-sg"}
            ]
            }
        },
        "MGMTSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow SSH for remote management",
                "GroupName": "mgmt-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "ToPort": "22",
                        "IpProtocol": "tcp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "mgmt-sg"}
            ]
            }
        },
        "WEBSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open web ports to Internet",
                "GroupName": "web-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "ToPort": "80",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "ToPort": "443",
                        "IpProtocol": "tcp"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "web-sg"}
            ]
            }
        },
        "VPCSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow comms inside VPC",
                "GroupName": "vpc-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "172.31.0.0/16",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "172.31.0.0/16",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "minecraft-sg"}
            ]
            }
        }
    },
    "Outputs": {
        "MCSG": {
            "Value": {"Ref": "MCAppSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mc-sg"}
            }
        },
        "WEBSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-web-sg"}
            }
        },
        "MGMTSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mgmt-sg"}
            }
        }
    }
}
