cfn/vpc.json
{
"AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Create a very simple VPC for my lab (two subnets)",
    "Metadata":{
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {"default": "Resource parameters"},
                    "Parameters": ["VpcCIDR", "SubnetCIDR"]
                }
            ]
        }
    },
    "Parameters": {
        "VpcCIDR": {
            "Description": "Parent CIDR for VPC",
            "Type": "String"
        },
        "SubnetCIDR": {
            "Description": "CIDRs for both subnets separated by a comma",
            "Type": "CommaDelimitedList"
        }
    },
    "Resources": {
        "MCVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {"Ref": "VpcCIDR"},
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {"Key": "Name", "Value": "lab-vpc"}
                ]
            }
        },
        "MCSBTA": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": ["MCVPC"],
            "Properties": {
                "VpcId": {"Ref": "MCVPC"},
                "AvailabilityZone":{"Fn::Sub": "${AWS::Region}a"},
                "CidrBlock": {"Fn::Select": ["0", {"Ref": "SubnetCIDR"}]},
                "MapPublicIpOnLaunch": "false",
                "Tags": [
                    {"Key": "Name", "Value": "lab-subnet-a"}
                ]
            }
        },
        "MCSBTB": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": ["MCVPC"],
            "Properties": {
                "VpcId": {"Ref": "MCVPC"},
                "AvailabilityZone":{"Fn::Sub": "${AWS::Region}b"},
                "CidrBlock": {"Fn::Select": ["1", {"Ref": "SubnetCIDR"}]},
                "MapPublicIpOnLaunch": "false",
                "Tags": [
                    {"Key": "Name", "Value": "lab-subnet-b"}
                ]
            }
        },
        "MCRTB":{
            "Type": "AWS::EC2::RouteTable",
            "DependsOn": ["MCVPC", "MCIGW"],
            "Properties": {
                "VpcId": {"Ref": "MCVPC"},
                "Tags": [
                    {"Key": "Name", "Value": "minecraft-rtb"}
                ]        
            }
        },
        "MCRTBAssocA":{
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": ["MCRTB", "MCSBTA"],
            "Properties": {
                "RouteTableId": {"Ref": "MCRTB"},
                "SubnetId": {"Ref": "MCSBTA"}
            }
        },
        "MCRTBAssocB":{
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": ["MCRTB", "MCSBTB"],
            "Properties": {
                "RouteTableId": {"Ref": "MCRTB"},
                "SubnetId": {"Ref": "MCSBTB"}
            }
        },
        "MCWebRoute":{
            "Type": "AWS::EC2::Route",
            "DependsOn": ["MCVPC", "MCIGW", "MCRTB"],
            "Properties": {
                "RouteTableId": {"Ref": "MCRTB"},
                "GatewayId": {"Ref": "MCIGW"},
                "DestinationCidrBlock": "0.0.0.0/0"
            }
        },
        "MCIGW": {
            "Type": "AWS::EC2::InternetGateway",
            "DependsOn": ["MCVPC"],
            "Properties": {
                "Tags": [
                    {"Key": "Name", "Value": "lab-igw"}
                ]            
            }
        },
        "MCIGWA": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "DependsOn": ["MCVPC", "MCIGW"],
            "Properties": {
                "InternetGatewayId": {"Ref": "MCIGW"},
                "VpcId": {"Ref": "MCVPC"}
              }
          },
          "MCAppSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SG for Minecraft server",
                "GroupName": "minecraft-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "25565",
                        "ToPort": "25565",
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "9225",
                        "ToPort": "9225",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "9225",
                        "ToPort": "9225",
                        "IpProtocol": "udp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "minecraft-server", "Value": ""},
                {"Key": "Name", "Value": "minecraft-sg"}
            ]
            }
        },
        "MGMTSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow SSH for remote management",
                "GroupName": "mgmt-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "ToPort": "22",
                        "IpProtocol": "tcp"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "mgmt-sg"}
            ]
            }
        },
        "WEBSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Open web ports to Internet",
                "GroupName": "web-sg",
                "VpcId": {"Ref": "VPCID"},
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "ToPort": "80",
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "ToPort": "443",
                        "IpProtocol": "tcp"
                    }
                ],
            "Tags": [
                {"Key": "Name", "Value": "web-sg"}
            ]
            }
        }
    },
    "Outputs": {
        "MCSG": {
            "Value": {"Ref": "MCAppSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mc-sg"}
            }
        },
        "WEBSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-web-sg"}
            }
        },
        "MGMTSG": {
            "Value": {"Ref": "WEBSG"},
            "Export": {
                "Name": {"Fn::Sub": "${AWS::StackName}-mgmt-sg"}
            }
        }
    }
}
